app/css/interface.css
html { -webkit-font-smoothing: antialiased; text-shadow: none; text-rendering: optimizeLegibility }
body { background-color: #CFDAE6 }
a { color: inherit; text-decoration: inherit !important }

@media (min-width:1200px) {
	.container.small { width: 930px; max-height: 930px; }
}
@media (min-width:992px) {
	.container.small { width: 830px; max-height: 830px; }
}

.navbar-default { border-radius: 0; background-color: #375a7f }
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus { color: #fff }
.navbar-brand { cursor: default }
.navbar-sidebar { cursor: pointer }

.pushed { transition: all .5s; -webkit-transition: all .5s; transform: translate3d(0%, 0, 0); transition-timing-function: cubic-bezier(0.4, 0, 1, 1); -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1) }
.pushed.active { cursor: default; -webkit-user-select: none; -moz-user-select: none }

.well { border-radius: 2px; background-color: #EFEFEF }
.well.infos h1 { margin: 0; font-size: 22px; text-align: center; color: #333 }

.sidebar { position: absolute; width: 300px; height: 100%; top: 0; left: 0; z-index: 100; background-color: #2c3e50; border-right: 1px solid #171A1D; transition: transform .5s; -webkit-transition: -webkit-transform .5s; transform: translate3d(-100%, 0, 0); color: #fff; transition-timing-function: cubic-bezier(0.4, 0, 1, 1); -webkit-transition-timing-function: cubic-bezier(0.4, 0, 1, 1) }
.sidebar h1 { margin: 35px 0; font-size: 26px; text-align: center; text-transform: uppercase; letter-spacing: 1px }
.sidebar ul { margin: 0; padding: 0; list-style: none }
.sidebar ul li a { display: block; padding: 1em 1em 1em 1.2em; text-transform: uppercase; letter-spacing: 1px; color: #fff; text-shadow: 0 0 1px rgba(255, 255, 255, 0.1) }
.sidebar ul li { transition: background .3s; border-bottom: 1px solid #171A1D }
.sidebar ul li:first-child { border-top: 1px solid #171A1D }
.sidebar ul li:hover,
.sidebar ul li:active { background-color: #171A1D }
.sidebar ul li img { margin: -2px 0 0 0; }
.sidebar-close { cursor: pointer }

.row .panel .panel-heading { text-align: center; background-color: #375a7f; color: #fff; font-size: 18px }
.row .panel .panel-heading a:hover,
.row .panel .panel-heading a:active,
.row .panel .panel-heading a:focus { color: inherit }
.row .panel ul li { transition: background .3s; cursor: pointer; font-size: 16px; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none }
.row .panel ul li:hover { transition: background .3s; background-color: #eee }
.row .panel ul li span { float: right }
.row h1 { margin: 0 0 15px; font-size: 22px; text-align: center }
.row h1 small { font-size: 75%; color: inherit }

.notes .panel ul li { cursor: default; }
.notes .panel ul li:hover,
.notes .panel ul li:active,
.notes .panel ul li:focus { background-color: inherit; }

.action.row .col-md-6 .progress { margin-bottom: 20px }

.upgrades-list { max-height: 450px; overflow-y: auto; }
.upgrades-show { margin: 0 0 15px 0; }
.upgrade-bought.list-group-item { background-color: rgba(22, 160, 133, 0.25); }
.upgrade-bought.list-group-item:hover,
.upgrade-bought.list-group-item:active,
.upgrade-bought.list-group-item:focus { background-color: rgba(22, 160, 133, 0.35) !important; }

.action-content { width: 100%; text-align: center }
.action-content h1 { margin: 0 0 6px; font-size: 20px }
.action-content h2 { margin: 0 0 6px; font-size: 16px }
.action-content h3 { margin: 0; font-size: 14px; line-height: 25px }
.action-content .row { margin: 0 -15px 10px }

.kong.container h1 { font-size: 22px; }
.kong.container h1 a { text-decoration: underline !important; }
.kong.container h2 { font-size: 18px; }

.options.container h1 { margin: 5px 0 15px 0; font-size: 28px; }
.options.container h2 { margin: 10px 0 10px 0; font-size: 20px; }

.notes.container h1 { margin: 5px 0 5px 0; text-align: left; font-size: 20px; }
.notes ul li ul li { font-size: 18px; }

.progress { height: 14px; background-color: #D7D8D8 }
.progress.mid-bar { width: 65% }
.progress.middle { margin: 0 auto }
.progress-bar { -webkit-transition: none; transition: none; -o-transition: none; -moz-transition: none }
.progress span { line-height: 14px; font-size: 12px }

